styles.css
body {
  height: 100vh;
  margin: 0;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  font-family: Arial, Helvetica, sans-serif;
}
footer {
  text-align: center;
  padding: 32px 0px;
  color: #e5e7eb;
  font-size: 18px;
}
.nav {
  display: flex;
  justify-content: space-around;
}
ul {
  display: flex;
  justify-content: space-evenly;
  list-style: none;
  gap: 32px;
}

header,
footer {
  background-color: #1f2937;
}
.main {
  font-size: 24px;
  font-weight: 800;
  color: #f9faf8;
  margin: 0;
}
a,
.hero-sub {
  text-decoration: none;
  color: #e5e7eb;
  font-size: 18px;
  color: #e5e7eb;
}
.intro {
  display: flex;
  justify-content: center;
  gap: 64px;
}
.intro-info {
  max-height: 350px;
  max-width: 500px;
}

.hero-main {
  font-size: 48px;
  font-weight: bolder;
  color: #f9faf8;
}
.button {
  background-color: #3882f6;
  color: #e5e7eb;
  padding: 8px 20px;
  font-weight: 900;
  border-radius: 6px;
  font-size: 16px;
}
.image {
  height: 350px;
  width: 500px;
  display: flex;
  background-color: gray;
  justify-content: center;
  align-items: center;
}

header {
  padding-bottom: 100px;
  padding-left: 75px;
  padding-right: 75px;
}
.content {
  text-align: center;
}
.content-info {
  text-align: center;
  padding-bottom: 100px;
}
.cards {
  display: flex;
  justify-content: center;
  gap: 32px;
}
.info {
  font-size: 36px;
  font-weight: 800;
  color: #1f2937;
}
.card {
  width: 200px;
  display: flex;
  align-items: center;
  flex-direction: column;
}
.card-image {
  width: 150px;
  height: 150px;
  border: 4px solid #3882f6;
  border-radius: 10px;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.quote {
  background-color: #e5e7eb;
  padding: 125px 300px;
}
.quote-text {
  font-size: 36px;
  font-style: italic;
  color: #1f2937;
  margin: 0;
  text-align: left;
}
.author {
  font-size: 20px;
  font-weight: 800;
  text-align: right;
  margin: 0;
}

.sign-up {
  padding: 100px 200px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.sign-up-container {
  background-color: #3882f6;
  display: flex;
  align-items: center;
  gap: 64px;
  padding: 50px 100px;
  border-radius: 5px;
}
.button-border {
  border: 2px solid #e5e7eb;
}

.sign-up-info {
  font-size: 18px;
  color: #e5e7eb;
  margin: 0;
}
.sign-up .main,
.sign-up-info {
  text-align: left;
}
.button:hover {
  cursor: pointer;
  background-color: #16376b;
}
a:hover {
  cursor: pointer;
  color: #16376b;
}

